ФЗ12: добавлены JDBC, DAO, schema.sql/data.sql, контроллеры и сервисы для жанров и MPA